# Libra

./: ._.gitignore  ._build.sh  .gitignore  CMakeLists.txt  README.md  build.sh
inc/: libra.h  win_linker_options.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  copy-assets.cmake  libra.cpp  main.cpp
